--- a/Bookstore/bookstore-app/index.html
+++ b/Bookstore/bookstore-app/index.html
@@ -29,8 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="#!">Bookchain</a>
-                <button type="button"
-                    class="btn btn-primary navbar-item inactive" href="#">Log In</a>
+                <button type="button" onclick = "collectBalance()" class="btn btn-primary navbar-item inactive" id="login" href="#"> <p> Refresh Page to Log In </p> </a>
 
             </div>
         </nav>
@@ -112,8 +111,9 @@
             </div>
         </footer>
         <!-- Bootstrap core JS-->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!--Helia-->
+        <script src="https://unpkg.com/@helia/strings/dist/index.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
